commit subir a render

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=empleado-api
-spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
-spring.datasource.username=postgres
-spring.datasource.password=${PGPASSWORD}
-
-# spring.datasource.url=jdbc:postgresql://monorail.proxy.rlwy.net:42287/railway
+# spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 # spring.datasource.username=postgres
-# spring.datasource.password=EZnIteOJXUQPrkfsrMwdFpWMvMxWzwye
+# spring.datasource.password=${PGPASSWORD}
+
+spring.datasource.url=jdbc:postgresql://roundhouse.proxy.rlwy.net:40231/railway
+ spring.datasource.username=postgres
+ spring.datasource.password=RueGDilvnKsbyokdlklZflZULCKcXjxi
 
 # Configuracion del Driver JDBC
 spring.datasource.driver-class-name=org.postgresql.Driver
